--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       button{font-size:30px;
       height:40px;
       outline: none;
+       cursor: pointer;                       
       width:40px;
       text-align:center;
       border:solid black;
