--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
  }
     </script>
     <style>
+         @media only screen and (max-width:700px) {
+         [class*="container"] {
+         width: 100%;}
+         }
+                            
         body{width:100%;
         height:100%;}
         
